--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <!-- MAIN ACTIVITY -->
     <string name="close_drawer">Close Drawer menu</string>
     <string name="open_drawer">Open Drawer menu</string>
-    <string name="game">Game</string>
+    <string name="old_games">Old games</string>
+    <string name="new_game">New game</string>
     <string name="combinations">Combinations</string>
     <string name="green_book">Green Book</string>
     <string name="rate">Rate</string>
@@ -15,9 +16,7 @@
     <string name="press_again_to_exit">Press again to exit</string>
 
     <!-- OLD GAMES -->
-    <string name="old_games">Old games</string>
-    <string name="new_game">New game</string>
-    <string name="theres_no_games_yet_start_one">There\'s no games yet.\n\nStart one!</string>
+    <string name="theres_no_games_yet_start_one">There\'s no games yet,\nStart one!</string>
     <string name="best_hand">Best hand</string>
     <string name="rounds">Rounds</string>
     <string name="delete">Delete</string>
