chips en new game funcioanndo falta limitarlo a 4 chips maximo falta crear jugadores que no existan falta empeza runa partida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="rounds">Rounds</string>
     <string name="delete">Delete</string>
     <string name="resume">Resume</string>
+    <string name="enter_a_name">Enter a name</string>
 
 
 </resources>
