--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="delete">Delete</string>
     <string name="resume">Resume</string>
     <string name="enter_a_name">Enter a name</string>
+    <string name="add_new_player">Add new player</string>
+    <string name="player_name">Player name</string>
 
 
 </resources>
