New game finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="add_new_player">Add new player</string>
     <string name="player_name">Player name</string>
     <string name="key_extra_game_id">key_extra_game_id</string>
+    <string name="just_four_players">Just 4 players</string>
+    <string name="just_four_players_please">Just 4 players please</string>
 
 
 </resources>
