Migrating Game to MVVM; List done, Table almost.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,5 +190,6 @@
     <string name="south">South</string>
     <string name="north">North</string>
     <string name="ups_something_wrong">Ups! Somenthing went wrong.</string>
+    <string name="list">List</string>
 
 </resources>
