--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,5 +191,6 @@
     <string name="north">North</string>
     <string name="ups_something_wrong">Ups! Somenthing went wrong.</string>
     <string name="list">List</string>
+    <string name="select_looser_player">Select discarder player</string>
 
 </resources>
