--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,7 +195,6 @@
     <string name="select_discarder_player">Select discarder player</string>
     <string name="hand_points">Hand points</string>
     <string name="penalty_points">Penalty points</string>
-    <string name="enter_points">Enter points</string>
     <string name="seat_player_name">Seat player name</string>
     <string name="see_list">See list</string>
     <string name="close">Close</string>
@@ -203,10 +202,11 @@
     <string name="player_south_name">Player South name</string>
     <string name="player_west_name">Player West name</string>
     <string name="player_north_name">Player North name</string>
-    <string name="divided_equally">Divided equally</string>
+    <string name="equally_divided">Equally divided</string>
     <string name="players">Players</string>
     <string name="players_names">Players names</string>
     <string name="edit_names">Edit names</string>
     <string name="round">Round</string>
+    <string name="save">Save</string>
 
 </resources>
