--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,5 +208,18 @@
     <string name="edit_names">Edit names</string>
     <string name="round">Round</string>
     <string name="save">Save</string>
+    <string name="hu">Hu</string>
+    <string name="penalty">Penalty</string>
+    <string name="back"><![CDATA[<--]]></string>
+    <string name="zero">0</string>
+    <string name="nine">9</string>
+    <string name="eight">8</string>
+    <string name="seven">7</string>
+    <string name="six">6</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="three">3</string>
+    <string name="two">2</string>
+    <string name="one">1</string>
 
 </resources>
