Working until actions dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,5 +230,6 @@
     <string name="x">x</string>
     <string name="confirm">Confirm</string>
     <string name="end">End</string>
+    <string name="mahjong">Mahjong</string>
 
 </resources>
