--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,11 @@
     <string name="app_name">Mahjong Scoring 2</string>
 
     <!-- BASE FRAGMENT -->
-    <string name="activity_must_implement_ibaseuimethods">Activity must implement IBaseUiMethods</string>
 
     <!-- MAIN ACTIVITY -->
     <string name="close_drawer">Close Drawer menu</string>
     <string name="open_drawer">Open Drawer menu</string>
     <string name="old_games">Old games</string>
-    <string name="new_game">New game</string>
     <string name="combinations">Combinations</string>
     <string name="green_book">Green Book</string>
     <string name="rate">Rate</string>
@@ -21,29 +19,10 @@
     <string name="rounds">Rounds</string>
     <string name="delete">Delete</string>
     <string name="resume">Resume</string>
-    <string name="enter_a_name">Enter a name</string>
-    <string name="create_player">Create player</string>
-    <string name="player_name">Player name</string>
-    <string name="key_extra_game_id">key_extra_game_id</string>
-    <string name="just_four_players">Just 4 players</string>
-    <string name="just_four_players_please">Just 4 players please</string>
     <string name="delete_game">Delete game</string>
     <string name="are_you_sure">Are you sure?</string>
 
     <!--COMBINATIONS-->
-    <string name="image_combination_example">Combination example image</string>
-    <string name="one_point">1 Point</string>
-    <string name="two_points">2 Points</string>
-    <string name="four_points">4 Points</string>
-    <string name="six_points">6 Points</string>
-    <string name="eight_points">8 Points</string>
-    <string name="twelve_points">12 Points</string>
-    <string name="sixteen_points">16 Points</string>
-    <string name="twentyfour_points">24 Points</string>
-    <string name="thirtytwo_points">32 Points</string>
-    <string name="fourtyeight_points">48 Points</string>
-    <string name="sixtyfour_points">64 Points</string>
-    <string name="eightyeight_points">88 Points</string>
 
     <string name="pure_double_chow">Pure double Chow</string>
     <string name="mixed_double_chow">Mixed double Chow</string>
@@ -136,7 +115,6 @@
     <string name="nine_gates">Nine gates</string>
     <string name="four_kongs">Four Kongs</string>
     <string name="seven_shifted_pairs">Seven shifted pairs</string>
-    <string name="thirteen_orphans">Thirteen orphans</string>
 
     <string name="description_edge_wait">Win with 3 or 7 having 1–2 or 8–9</string>
     <string name="description_closed_wait">Win with central Chow tile</string>
@@ -156,14 +134,9 @@
     <string name="toggle_descriptions">Toogle descriptions</string>
 
     <!-- GREEN BOOK -->
-    <string name="downloading_green_book_">Downloading the most recent version from the EMA portal</string>
-    <string name="green_book_download">Green Book download</string>
-    <string name="app_for_file_not_founded">Couldn\'t find apps for this file type</string>
-    <string name="see_on_web">See on web</string>
 
     <!-- CONTACT -->
     <string name="no_email_apps_founded">Couldn\'t find email apps</string>
-    <string name="send_mail">Send mail</string>
 
     <!-- GAME -->
     <string name="table">Table</string>
@@ -172,30 +145,20 @@
     <string name="pause">Pause</string>
     <string name="exit">Exit</string>
     <string name="exit_game">Exit game</string>
-    <string name="press_ok_to_exit">Press OK to exit</string>
-    <string name="error_updating_end_date">There was an error updating game end date</string>
     <string name="totals">Totals</string>
     <string name="no_rounds_yet">There aren´t rounds yet</string>
     <string name="points">Points</string>
     <string name="number_symbol">#</string>
     <string name="final_results">Final results</string>
-    <string name="duration">Duration</string>
     <string name="cancel_penalties">Cancel penalties</string>
-    <string name="isPenalized">Penalty</string>
     <string name="draw">Draw</string>
-    <string name="hu_selfpick">Hu\nSelf pick</string>
-    <string name="hu_discard">Hu\nDiscard</string>
     <string name="east">East</string>
     <string name="west">West</string>
     <string name="south">South</string>
     <string name="north">North</string>
     <string name="ups_something_wrong">Ups! Somenthing went wrong.</string>
     <string name="list">List</string>
-    <string name="select_discarder">Select discarder. Selfpick if not:</string>
-    <string name="select_discarder_player">Select discarder player</string>
-    <string name="hand_points">Hand points</string>
     <string name="penalty_points">Penalty points</string>
-    <string name="seat_player_name">Seat player name</string>
     <string name="see_list">See list</string>
     <string name="close">Close</string>
     <string name="player_east_name">Player East name</string>
@@ -206,15 +169,10 @@
     <string name="player_south">Player South</string>
     <string name="player_west">Player West</string>
     <string name="player_north">Player North</string>
-    <string name="equally_divided">Equally divided</string>
-    <string name="players">Players</string>
-    <string name="players_names">Players names</string>
+    <string name="divided">Divided</string>
     <string name="edit_names">Edit names</string>
-    <string name="round">Round</string>
     <string name="save">Save</string>
-    <string name="hu">Hu</string>
     <string name="penalty">Penalty</string>
-    <string name="back"><![CDATA[<—]]></string>
     <string name="zero">0</string>
     <string name="nine">9</string>
     <string name="eight">8</string>
@@ -225,10 +183,6 @@
     <string name="three">3</string>
     <string name="two">2</string>
     <string name="one">1</string>
-    <string name="select_action">Select action</string>
-    <string name="min_mcr_points">8</string>
-    <string name="x">x</string>
-    <string name="confirm">Confirm</string>
     <string name="end">End</string>
     <string name="mahjong">Mahjong</string>
     <string name="backspace">Backspace</string>
