--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -15,53 +15,53 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <resources>
-    <string name="app_name">麻将计分比赛规则</string>
+    <string name="app_name">国际麻将计分器</string>
     <string name="close_drawer">关闭菜单</string>
     <string name="open_drawer">打开菜单</string>
-    <string name="old_games">老游戏</string>
-    <string name="combinations">组合</string>
+    <string name="old_games">游戏记录</string>
+    <string name="combinations">番种表</string>
     <string name="green_book">绿皮书</string>
     <string name="rate">评价应用</string>
-    <string name="contact">联系</string>
+    <string name="contact">联络</string>
     <string name="press_again_to_exit">再次按下退出</string>
-    <string name="theres_no_games_yet_start_one">没有任何游戏尚未。\n开始一个！</string>
-    <string name="best_hand">最好的一手牌</string>
-    <string name="rounds">大红大紫</string>
+    <string name="theres_no_games_yet_start_one">尚无记录。\n开始新游戏</string>
+    <string name="best_hand">最好手牌</string>
+    <string name="rounds">圈数</string>
     <string name="delete">删除</string>
-    <string name="resume">恢复</string>
+    <string name="resume">继续</string>
     <string name="delete_game">删除游戏</string>
-    <string name="are_you_sure">你确定吗？</string>
+    <string name="are_you_sure">确定？</string>
     <string name="search">搜索</string>
-    <string name="combination_name">组合名称</string>
-    <string name="toggle_descriptions">切换描述</string>
-    <string name="no_email_apps_founded">找不到电子邮件应用</string>
-    <string name="table">表</string>
-    <string name="game">游戏</string>
-    <string name="totals">汇总</string>
-    <string name="points">点</string>
-    <string name="number_symbol">＃</string>
+    <string name="combination_name">番种名称</string>
+    <string name="toggle_descriptions">展开解释</string>
+    <string name="no_email_apps_founded">找不到邮件应用</string>
+    <string name="table">游戏桌</string>
+    <string name="game">对局</string>
+    <string name="totals">总分</string>
+    <string name="points">番值</string>
+    <string name="number_symbol">#</string>
     <string name="final_results">最终结果</string>
     <string name="cancel_penalties">取消所有处罚</string>
-    <string name="draw">画</string>
+    <string name="draw">荒牌</string>
     <string name="east">东</string>
-    <string name="west">西方</string>
+    <string name="west">西</string>
     <string name="south">南</string>
     <string name="north">北</string>
-    <string name="ups_something_wrong">UPS！ Somenthing出了错。</string>
-    <string name="list">名单</string>
-    <string name="close">关</string>
-    <string name="player_east_name">球员东名</string>
-    <string name="player_south_name">球员南名称</string>
-    <string name="player_west_name">球员西名</string>
-    <string name="player_north_name">球员名北</string>
-    <string name="player_east">球员东</string>
-    <string name="player_south">球员南</string>
-    <string name="player_west">球员西</string>
-    <string name="player_north">播放器北</string>
-    <string name="divided">分为</string>
+    <string name="ups_something_wrong">糟糕！出错了！</string>
+    <string name="list">成绩记录表</string>
+    <string name="close">关闭</string>
+    <string name="player_east_name">东风玩家名字</string>
+    <string name="player_south_name">南风玩家名字</string>
+    <string name="player_west_name">西风玩家名字</string>
+    <string name="player_north_name">北风玩家名字</string>
+    <string name="player_east">东风玩家</string>
+    <string name="player_south">南风玩家</string>
+    <string name="player_west">西风玩家</string>
+    <string name="player_north">北风玩家</string>
+    <string name="divided">平分</string>
     <string name="edit_names">编辑姓名</string>
     <string name="save">保存</string>
-    <string name="penalty">罚款</string>
+    <string name="penalty">处罚</string>
     <string name="zero">0</string>
     <string name="nine">9</string>
     <string name="eight">8</string>
@@ -73,106 +73,107 @@
     <string name="two">2</string>
     <string name="one">1</string>
     <string name="end">结束</string>
-    <string name="mahjong">麻将</string>
-    <string name="backspace">退格</string>
-    <string name="ok">好</string>
-    <string name="discarder_">废弃部？</string>
+    <string name="mahjong">和牌</string>
+    <string name="backspace">删除</string>
+    <string name="ok">确定</string>
+    <string name="discarder_">输家？</string>
     <string name="cancel">取消</string>
-    <string name="pts">积分</string>
-    <string name="delete_round">删除圆</string>
-    <string name="first">第一</string>
-    <string name="second">第二</string>
-    <string name="rotate_seats">旋转座椅</string>
-    <string name="pure_double_chow">纯双州城</string>
-    <string name="mixed_double_chow">混合双州城</string>
-    <string name="short_straight">短直</string>
-    <string name="two_terminal_chows">两个终端的松狮</string>
-    <string name="pung_of_terminals_or_honors">终端或荣誉彭</string>
-    <string name="melded_kong">香港融合在一起</string>
-    <string name="one_voided_suit">一个作废的西装</string>
-    <string name="no_honors">没有荣誉</string>
-    <string name="edge_wait">边等待</string>
-    <string name="closed_wait">闭等待</string>
-    <string name="single_waiting">单等待</string>
-    <string name="self_drawn">自绘</string>
-    <string name="flower_tiles">花或季节</string>
-    <string name="dragon_pung">彭龙</string>
-    <string name="prevalent_wind">流行风</string>
-    <string name="seat_wind">座椅风</string>
-    <string name="concealed_hand">暗牌</string>
-    <string name="all_chows">所有的松狮</string>
-    <string name="tile_hog">瓷砖猪</string>
-    <string name="double_pungs">双pungs</string>
-    <string name="two_concealed_pungs">两个隐蔽pungs</string>
+    <string name="pts">分数</string>
+    <string name="delete_round">删除此盘</string>
+    <string name="first">第一名</string>
+    <string name="second">第二名</string>
+    <string name="rotate_seats">旋转座位</string>
+    <string name="pure_double_chow">一般高</string>
+    <string name="mixed_double_chow">喜相逢</string>
+    <string name="short_straight">连六</string>
+    <string name="two_terminal_chows">老少副</string>
+    <string name="pung_of_terminals_or_honors">幺九刻</string>
+    <string name="melded_kong">明杠</string>
+    <string name="one_voided_suit">缺一门</string>
+    <string name="no_honors">无字</string>
+    <string name="edge_wait">边张</string>
+    <string name="closed_wait">坎张</string>
+    <string name="single_waiting">单调将</string>
+    <string name="self_drawn">自摸</string>
+    <string name="flower_tiles">花牌</string>
+    <string name="dragon_pung">箭刻</string>
+    <string name="prevalent_wind">圈风刻</string>
+    <string name="seat_wind">门风刻</string>
+    <string name="concealed_hand">门前清</string>
+    <string name="all_chows">平和</string>
+    <string name="tile_hog">四归一</string>
+    <string name="double_pungs">双同刻</string>
+    <string name="two_concealed_pungs">双暗刻</string>
     <string name="concealed_kong">暗杠</string>
-    <string name="all_simples">所有simples</string>
-    <string name="outside_hand">手外</string>
-    <string name="fully_concealed_hand">全暗牌</string>
-    <string name="two_melded_kongs">两个融合在一起Kongs</string>
-    <string name="last_tile">最后一张牌</string>
-    <string name="all_pungs">所有pungs</string>
-    <string name="half_flush">半冲洗</string>
-    <string name="mixed_shifted_chows">混合转移松狮</string>
-    <string name="all_types">所有类型</string>
-    <string name="melded_hand">融合在一起的手</string>
-    <string name="two_dragon_pungs">二龙pungs</string>
-    <string name="mixed_straight">混合直</string>
-    <string name="reversible_tiles">可逆地砖</string>
-    <string name="mixed_triple_chow">混合三重州城</string>
-    <string name="mixed_shifted_pungs">混合转移pungs</string>
-    <string name="chicken_hand">鸡手</string>
-    <string name="last_tile_draw">最后一张牌平局</string>
-    <string name="last_tile_claim">最后一张牌要求</string>
-    <string name="out_with_replacement_tile">出与更换瓷砖</string>
-    <string name="robbing_the_kong">劫岗</string>
-    <string name="two_concealed_kongs">两个隐蔽Kongs</string>
-    <string name="lesser_honors_and_knitted_tiles">小荣针织瓷砖</string>
-    <string name="knitted_straight">针织直</string>
-    <string name="upper_four">高四</string>
-    <string name="lower_four">低四位</string>
-    <string name="big_three_winds">三级巨头风</string>
-    <string name="pure_straight">纯直</string>
-    <string name="three_suited_terminal_chows">三适合终端松狮</string>
-    <string name="pure_shifted_chows">纯转移松狮</string>
-    <string name="all_fives">所有五岁以下儿童</string>
-    <string name="triple_pungs">三重pungs</string>
-    <string name="three_concealed_pungs">三个隐蔽pungs</string>
+    <string name="all_simples">断幺</string>
+    <string name="outside_hand">全带幺</string>
+    <string name="fully_concealed_hand">不求人</string>
+    <string name="two_melded_kongs">双明杠</string>
+    <string name="last_tile">和绝张</string>
+    <string name="all_pungs">碰碰和</string>
+    <string name="half_flush">混一色</string>
+    <string name="mixed_shifted_chows">三色三步高</string>
+    <string name="all_types">五门齐</string>
+    <string name="melded_hand">全求人</string>
+    <string name="two_dragon_pungs">双箭刻</string>
+    <string name="mixed_straight">花龙</string>
+    <string name="reversible_tiles">推不倒</string>
+    <string name="mixed_triple_chow">三色三同顺</string>
+    <string name="mixed_shifted_pungs">三色三节高</string>
+    <string name="chicken_hand">无番和</string>
+    <string name="last_tile_draw">妙手回春</string>
+    <string name="last_tile_claim">海底捞月</string>
+    <string name="out_with_replacement_tile">杠上开花</string>
+    <string name="robbing_the_kong">抢杠和</string>
+    <string name="two_concealed_kongs">双暗杠</string>
+    <string name="lesser_honors_and_knitted_tiles">全不靠</string>
+    <string name="knitted_straight">组合龙</string>
+    <string name="upper_four">大于五</string>
+    <string name="lower_four">小于五</string>
+    <string name="big_three_winds">三风刻</string>
+    <string name="pure_straight">清龙</string>
+    <string name="three_suited_terminal_chows">三色双龙会</string>
+    <string name="pure_shifted_chows">一色三步高</string>
+    <string name="all_fives">全带五</string>
+    <string name="triple_pungs">三同刻</string>
+    <string name="three_concealed_pungs">三暗刻</string>
     <string name="seven_pairs">七对</string>
-    <string name="greater_honors_and_knitted_tiles">更大的荣誉和针织瓷砖</string>
-    <string name="all_even_pungs">所有甚至pungs</string>
-    <string name="full_flush">充分冲洗</string>
-    <string name="pure_triple_chow">纯三重州城</string>
-    <string name="pure_shifted_pungs">纯转移pungs</string>
-    <string name="upper_tiles">上瓷砖</string>
-    <string name="medium_tiles">中瓦</string>
-    <string name="lower_tiles">低瓦</string>
-    <string name="four_pure_shifted_chows">四点纯转移的松狮</string>
-    <string name="three_kongs">三Kongs</string>
-    <string name="all_terminals_and_honors">所有终端和荣誉</string>
-    <string name="quadruple_chow">四州城</string>
-    <string name="four_pure_shifted_pungs">四个纯转移pungs</string>
-    <string name="all_terminals">所有终端</string>
-    <string name="all_honors">所有荣誉</string>
-    <string name="little_four_winds">小四方</string>
-    <string name="little_three_dragons">小三条小龙</string>
-    <string name="four_concealed_pungs">四个隐蔽pungs</string>
-    <string name="pure_terminal_chows">纯终端的松狮</string>
-    <string name="big_four_winds">四大风</string>
-    <string name="big_three_dragons">三条巨头龙</string>
-    <string name="all_green">所有绿色</string>
-    <string name="nine_gates">九莲</string>
-    <string name="four_kongs">四Kongs</string>
-    <string name="seven_shifted_pairs">七双转移</string>
-    <string name="description_edge_wait">具有3个或7具有1–2个或8–9赢</string>
-    <string name="description_closed_wait">中央州城瓷砖取胜</string>
-    <string name="description_single_waiting">与对瓷砖取胜</string>
-    <string name="description_self_drawn">从墙壁瓷砖取胜</string>
-    <string name="description_concealed_hand">让所有从去年除外瓷砖墙</string>
-    <string name="description_fully_concealed_hand">所有的墙</string>
-    <string name="description_last_tile">赢瓷砖暴露或丢弃三次</string>
-    <string name="description_melded_hand">所有瓷砖融合在一起</string>
-    <string name="description_last_tile_draw">与去年墙砖取胜</string>
-    <string name="description_last_tile_claim">赢与去年丢弃瓷砖</string>
-    <string name="description_out_with_replacement_tile">赢与香港额外的瓷砖</string>
-    <string name="description_robbing_the_kong">赢与其他玩家香港扩展瓦</string>
+    <string name="greater_honors_and_knitted_tiles">七星不靠</string>
+    <string name="all_even_pungs">全双刻</string>
+    <string name="full_flush">清一色</string>
+    <string name="pure_triple_chow">一色三同顺</string>
+    <string name="pure_shifted_pungs">一色三节高</string>
+    <string name="upper_tiles">全大</string>
+    <string name="medium_tiles">全中</string>
+    <string name="lower_tiles">全小</string>
+    <string name="four_pure_shifted_chows">一色四步高</string>
+    <string name="three_kongs">三杠</string>
+    <string name="all_terminals_and_honors">混幺九</string>
+    <string name="quadruple_chow">一色四同顺</string>
+    <string name="four_pure_shifted_pungs">一色四节高</string>
+    <string name="all_terminals">清幺九</string>
+    <string name="all_honors">字一色</string>
+    <string name="little_four_winds">小四喜</string>
+    <string name="little_three_dragons">小三元</string>
+    <string name="four_concealed_pungs">四暗刻</string>
+    <string name="pure_terminal_chows">一色双龙会</string>
+    <string name="big_three_dragons">大三元</string>
+    <string name="thirteen_orphans">十三幺</string>
+    <string name="big_four_winds">大四喜</string>
+    <string name="all_green">绿一色</string>
+    <string name="nine_gates">九宝莲灯</string>
+    <string name="four_kongs">四杠</string>
+    <string name="seven_shifted_pairs">连七对</string>
+    <string name="description_edge_wait">只能听和123的3或789的7</string>
+    <string name="description_closed_wait">只能听和顺子中间的牌</string>
+    <string name="description_single_waiting">调单张牌作将和牌</string>
+    <string name="description_self_drawn">拿牌后成和牌</string>
+    <string name="description_concealed_hand">没有吃牌、碰牌、明杠，和他家打出的牌</string>
+    <string name="description_fully_concealed_hand">没有吃牌、碰牌、明杠，自摸和牌</string>
+    <string name="description_last_tile">和牌池、桌面已亮明三张所剩的第四张相同的牌</string>
+    <string name="description_melded_hand">四副牌全是吃、碰、（明杠），和他家打出的牌</string>
+    <string name="description_last_tile_draw">自摸牌墙上最后一张牌和牌</string>
+    <string name="description_last_tile_claim">和打出的最后一张牌</string>
+    <string name="description_out_with_replacement_tile">杠牌时，从牌墙补上一张牌成和牌</string>
+    <string name="description_robbing_the_kong">和他人自拿开明杠的牌</string>
 </resources>
